src/objects/smagicinteract__MMS_Detail__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__MMS_Type__c</fullName>
        <label>MMS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Url__c</fullName>
        <label>MMS Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_History__c</fullName>
        <label>SMS History</label>
        <referenceTo>smagicinteract__smsMagic__c</referenceTo>
        <relationshipLabel>MMS Details</relationshipLabel>
        <relationshipName>MMS_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MMS Detail</label>
    <nameField>
        <label>MMS Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMS Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>